fix: Correct z-index ordering for header

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -212,6 +212,7 @@ figure.fig-50 {
 
 .menubar {
     font-family: "Open Sans Condensed", sans-serif;
+    z-index: 1000;
 }
 
 .filetree {
